templates/production_deployment_template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow-model-deployment
spec:
  replicas: {replicas}
  selector:
    matchLabels:
      app: mlflow-model
  template:
    metadata:
      labels:
        app: mlflow-model
    spec:
      containers:
      - name: mlflow-model
        image: 192.168.1.67:5050/ml-production
        ports:
        - containerPort: 5001
