templates/production_service_template.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow-model-service
spec:
  selector:
    app: mlflow-model
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5001
  type: ClusterIP
