templates/production_ingress_template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlflow-model-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /invocations # or /model/predict, send predictions to INGRESS_IP/model/predict
        pathType: Prefix
        backend:
          service:
            name: mlflow-model-service
            port:
              number: 80
